--- a/ogapp/templates/contact.html
+++ b/ogapp/templates/contact.html
@@ -266,63 +266,57 @@
             <li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
           </ul>
         </div>
-
         <div class="col-lg-8">
           <div class="row links-wrap">
             <div class="col-6 col-sm-6 col-md-3">
               <ul class="list-unstyled">
-                <li><a href="{% url 'iservice' 'ABOUT' %}">About us</a></li>
-                <li><a href="{% url 'terms' %}">Terms and Conditions</a></li>
-                <li><a href="{% url 'contact' %}">Contact us</a></li>
-                <li><iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d59644446.984194264!2d91.5130743!3d-24.157415!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa20ad3b42d0d0245%3A0x3f36b978203408ab!2sOG%20Movers!5e0!3m2!1sen!2sin!4v1714326969689!5m2!1sen!2sin"
-                    width="340" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <li><a style="color: #00008B;" href="{% url 'iservice' 'ABOUT' %}">About us</a></li>
+                <li><a style="color: #00008B;" href="{% url 'terms' %}">Terms and Conditions</a>
                 </li>
-                <!--<li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509577!2d144.95373531544364!3d-37.817209979751984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ab0c93b70926705%3A0x1c033657a35104f0!2sAdelaide+SA+5000,+Australia!5e0!3m2!1sen!2sau!4v1630291924470!5m2!1sen!2sau" width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>-->
-                </li>
+                <li><a style="color: #00008B;" href="{% url 'contact' %}">Contact us</a></li>
+                <li><a style="color: #00008B;" href="{% url 'privacy' %}">Privacy Policy</a></li>
+                <li><a style="color: #00008B;" href="{% url 'iservice' 'FAQ' %}">FAQ</a></li>
+                <li><a style="color: #00008B;"
+                    href="{% url 'iservice' 'insurance-policy' %}">Insurance Policy</a></li>
               </ul>
             </div>
-
-
-
-
           </div>
         </div>
 
-      </div>
+        <!-- Google Maps iframe -->
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d59644446.984194264!2d91.5130743!3d-24.157415!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa20ad3b42d0d0245%3A0x3f36b978203408ab!2sOG%20Movers!5e0!3m2!1sen!2sin!4v1714326969689!5m2!1sen!2sin"
+          width="340" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-      <div class="border-top copyright">
-        <div class="row pt-4">
-          <div class="col-lg-6">
-            <p class="mb-2 text-center text-lg-start">Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script>. OG Movers. &mdash;
-              <!-- License information: https://untree.co/license/ -->
-            </p>
-            <a href="https://www.mandeep-developer.site/">2024 &copy; All Rights Reserved |
-              Designed and Developed
-              by
-              Developer</a>
+        <footer class="border-top">
+          <div class="container pt-4">
+            <div class="row">
+              <div class="col-lg-6">
+                <p class="mb-2 text-center text-lg-start">
+                  &copy;
+                  <script>document.write(new Date().getFullYear());</script> OG Movers. All Rights
+                  Reserved.
+                </p>
+                <p class="text-center text-lg-start">
+                  &copy; 2024 Designed and Developed by <a style="color: #00008B;"
+                    href="https://www.mandeep-developer.site/">Developer</a>
+                </p>
+              </div>
+              <div class="col-lg-6">
+                <ul
+                  class="list-unstyled d-inline-flex justify-content-center justify-content-lg-end">
+
+                </ul>
+              </div>
+            </div>
           </div>
-
-          <footer>
-            <ul class="list-unstyled d-inline-flex ms-auto">
-              <li class="me-4"><a href="{% url 'terms' %}">Terms & Conditions</a></li>
-              <li><a href="{% url 'privacy' %}">Privacy Policy</a></li>
-              <li><a class="nav-link" href=" {% url 'iservice' 'FAQ' %} ">FAQ</a></li>
-
-            </ul>
-
-          </footer>
-
-
-
-
-        </div>
+        </footer>
       </div>
-
     </div>
-  </footer>
+
+</div>
+</footer>
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
   
 
