--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -100,14 +100,6 @@
 		<i class="bi bi-telephone-fill"></i>
 	</a>
 	<style>
-		#background-img {
-			background-image: url('static/images/Background.jpg');
-			/* Replace 'image.png' with the actual path to your image */
-			background-size: cover;
-			/* Adjust as needed (cover, contain, etc.) */
-			background-repeat: no-repeat;
-		}
-
 		.bgg {
 			background-image: url('static/images/c-form.jpeg');
 			background-size: cover;
@@ -376,10 +368,10 @@
 								<hr id="HR">
 								<p>Fully Insured</p>
 								<hr id="HR">
-
 								<p>Scratch Proof Wrapping</p>
 								<hr id="HR">
-
+								<p>Minimum charges - 2 hours</p>
+								<hr id="HR">
 								<p>Special care for expensive and fragile items </p>
 								<hr id="HR">
 
@@ -451,12 +443,16 @@
 
 								<p>Scratch Proof Wrapping</p>
 								<hr id="HR">
+								<p>Minimum charges - 2 hours</p>
+								<hr id="HR">
 
 								<p>Special care for expensive and fragile items </p>
 								<hr id="HR">
 
 								<p>Assistance with Assembly and Disassembly</p>
 								<hr id="HR">
+									
+									
 
 							</div>
 							<div class="service-footer">
@@ -496,6 +492,8 @@
 								<hr id="HR">
 
 								<p>Scratch Proof Wrapping</p>
+								<hr id="HR">
+								<p>Minimum charges - 2 hours</p>
 								<hr id="HR">
 
 								<p>Special care for expensive and fragile items </p>
@@ -952,7 +950,7 @@
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-md-6">
-					<h2 class="section-title">Our Services</h2>
+					<h2 class="section-title ps-lg-5"><br><b>Our Services</b></h2>
 				</div>
 			</div>
 
@@ -987,7 +985,7 @@
 						<a href="#" class="post-thumbnail"><img src="{% static 'images/services3.jpeg'%}" alt="Image"
 								class="img-fluid"></a>
 						<div class="post-content-entry">
-							<h3><a href="#">3. Office relocation</a></h3>
+							<h3><a href="#">Office relocation</a></h3>
 							<p class="p">Elevate Your Workspace, Expert Relocation for a Fresh Start.</p>
 						</div>
 					</div>
@@ -1029,33 +1027,76 @@
 			}
 		</script>
 		<div class="container text-center">
+			<h2><b> Here's why we stand out</b></h2>
 			<hr>
 			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('service-details')">Our Services</a></h1>
 			<p id="service-details" style="display: none;">
-				We offer Home removals, Office removals, furniture removals, few items removal and heavy item removal.
+				<strong class="font-weight-bold text-dark">Residential Moving</strong><br>
+				Make your move stress-free! Our residential moving service ensures a smooth transition to your new home,
+				with careful handling and reliable service every step of the way.
+
+				<br><strong class="font-weight-bold text-dark">Commercial Moving</strong><br>
+				Relocate your business with minimal downtime! Our expert commercial moving team handles everything, from
+				office furniture to IT equipment, ensuring your operations are up and running quickly.
+
+				<br><strong class="font-weight-bold text-dark">Packing Services</strong><br>
+				Leave the packing to the pros! Our packing services offer secure and efficient packing for your
+				belongings, saving you time and ensuring everything arrives safely.
+
+				<br><strong class="font-weight-bold text-dark">Same Day Removals</strong><br>
+				Need to move in a hurry? Our same-day removals service gets you packed, moved, and settled on the same
+				day, with no compromise on quality or care.
+
+				<br><strong class="font-weight-bold  text-dark">Transparent Pricing</strong><br>
+				No surprises, just straightforward pricing! Our transparent pricing moving service ensures you know
+				exactly what you're paying for, with no hidden fees.
+
+				<br><strong class="font-weight-bold text-dark">Special Item Moving</strong><br>
+				Trust us with your most valuable items! Our specialty item moving service is designed for delicate,
+				oversized, or priceless items, handled with the utmost care and precision.
+
 			</p>
 			<hr>
 
 			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('cost-details')">Discount</h1>
 			<p id="cost-details" style="display: none;">
-				5% dicount winter sale if you book now
+				Don’t miss out on this exclusive offer to make your next move not only smoother but also more
+				affordable. Enquire and book via message and save 5% on all the prices.
 			</p>
 			<hr>
 			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('insurance-details')">Same-day removals</h1>
 			<p id="insurance-details" style="display: none;">
-				same day removal services with no extra charges
+				Indeed, we can accommodate your pressing demands with same-day removal services with no extra charges.
+				Even at short notice, your belongings will be handled with professionalism and care thanks to the prompt
+				and effective solutions our staff is committed to offering. Please get in touch with us if you need help
+				right away, and we'll try our best to assist you.
 
 			</p>
 			<hr>
-			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('booking-details')">4.Moving cost</h1>
+			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('booking-details')">Moving cost</h1>
 			<p id="booking-details" style="display: none;">
-				cheapest and fully transparent pricing
+				The cost of moving varies widely based on several factors including the distance of the move, the size
+				of your household, and the services you require.
+
+				Local movers typically charge by the hour, while long-distance moves are based on the weight of your
+				belongings and the distance traveled.
+
+				Additional expenses can include packing services, specialty item handling, number of movers, and
+				seasonal price variations.
+
+				To reduce costs, you might consider moving during off-peak times, handling some tasks yourself, and
+				asking about any hidden charges.
 			</p>
 			<hr>
 			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('local-long-distance-details')">No hidden charges</h1>
 			<p id="local-long-distance-details" style="display: none;">
-				No call out fee
-				no stairs fee
+				Our services are intended to be clear-cut, uncomplicated, and free of any additional costs. You will
+				receive transparent pricing that is devoid of any surprises. Since we value simplicity and honesty, we
+				make sure you are fully aware of all charges before committing. Please get in touch with us if you have
+				any questions about our prices; we're happy to assist you!
+
+				No Call-out fee
+				No Stairs fee
 			</p>
 			<hr>
 		</div>
@@ -1105,85 +1146,79 @@
 							<li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
 						</ul>
 					</div>
-
 					<div class="col-lg-8">
 						<div class="row links-wrap">
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="{% url 'iservice' 'ABOUT' %}">About us</a></li>
-									<li><a href="{% url 'terms' %}">Terms and Conditions</a></li>
-									<li><a href="{% url 'contact' %}">Contact us</a></li>
-									<li><iframe
-											src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d59644446.984194264!2d91.5130743!3d-24.157415!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa20ad3b42d0d0245%3A0x3f36b978203408ab!2sOG%20Movers!5e0!3m2!1sen!2sin!4v1714326969689!5m2!1sen!2sin"
-											width="340" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-											referrerpolicy="no-referrer-when-downgrade"></iframe>
+									<li><a style="color: #00008B;" href="{% url 'iservice' 'ABOUT' %}">About us</a></li>
+									<li><a style="color: #00008B;" href="{% url 'terms' %}">Terms and Conditions</a>
 									</li>
-									<!--<li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509577!2d144.95373531544364!3d-37.817209979751984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ab0c93b70926705%3A0x1c033657a35104f0!2sAdelaide+SA+5000,+Australia!5e0!3m2!1sen!2sau!4v1630291924470!5m2!1sen!2sau" width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>-->
-									</li>
+									<li><a style="color: #00008B;" href="{% url 'contact' %}">Contact us</a></li>
+									<li><a style="color: #00008B;" href="{% url 'privacy' %}">Privacy Policy</a></li>
+									<li><a style="color: #00008B;" href="{% url 'iservice' 'FAQ' %}">FAQ</a></li>
+									<li><a style="color: #00008B;"
+											href="{% url 'iservice' 'insurance-policy' %}">Insurance Policy</a></li>
 								</ul>
 							</div>
-
-
-
-
 						</div>
 					</div>
 
-				</div>
+					<!-- Google Maps iframe -->
+					<iframe
+						src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d59644446.984194264!2d91.5130743!3d-24.157415!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa20ad3b42d0d0245%3A0x3f36b978203408ab!2sOG%20Movers!5e0!3m2!1sen!2sin!4v1714326969689!5m2!1sen!2sin"
+						width="340" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+						referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-				<div class="border-top copyright">
-					<div class="row pt-4">
-						<div class="col-lg-6">
-							<p class="mb-2 text-center text-lg-start">Copyright &copy;
-								<script>document.write(new Date().getFullYear());</script>. OG Movers. &mdash;
-								<!-- License information: https://untree.co/license/ -->
-							</p>
-							<a href="https://www.mandeep-developer.site/">2024 &copy; All Rights Reserved |
-								Designed and Developed
-								by
-								Developer</a>
+					<footer class="border-top">
+						<div class="container pt-4">
+							<div class="row">
+								<div class="col-lg-6">
+									<p class="mb-2 text-center text-lg-start">
+										&copy;
+										<script>document.write(new Date().getFullYear());</script> OG Movers. All Rights
+										Reserved.
+									</p>
+									<p class="text-center text-lg-start">
+										&copy; 2024 Designed and Developed by <a style="color: #00008B;"
+											href="https://www.mandeep-developer.site/">Developer</a>
+									</p>
+								</div>
+								<div class="col-lg-6">
+									<ul
+										class="list-unstyled d-inline-flex justify-content-center justify-content-lg-end">
+
+									</ul>
+								</div>
+							</div>
 						</div>
-
-						<footer>
-							<ul class="list-unstyled d-inline-flex ms-auto">
-								<li class="me-4"><a href="{% url 'terms' %}">Terms & Conditions</a></li>
-								<li><a href="{% url 'privacy' %}">Privacy Policy</a></li>
-								<li><a class="nav-link" href=" {% url 'iservice' 'FAQ' %} ">FAQ</a></li>
-
-							</ul>
-
-						</footer>
-
-
-
-
-					</div>
+					</footer>
 				</div>
-
 			</div>
-		</footer>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() { dataLayer.push(arguments); }
-			gtag('js', new Date());
 
-			gtag('config', 'AW-16485596543');
-		</script>
-		<!-- End Footer Section -->
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-		<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-		<!-- Bootstrap JS and its dependencies -->
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	</div>
+	</footer>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'AW-16485596543');
+	</script>
+	<!-- End Footer Section -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+	<!-- Bootstrap JS and its dependencies -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-			crossorigin="anonymous"></script>
-		<script src="{% static 'js/tiny-slider.js' %}"></script>
-		<script src="{% static 'js/custom.js' %}"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
+	<script src="{% static 'js/tiny-slider.js' %}"></script>
+	<script src="{% static 'js/custom.js' %}"></script>
 </body>
 
 </html>
