--- a/ogapp/templates/privacy.html
+++ b/ogapp/templates/privacy.html
@@ -1,83 +1,143 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    {% load static %}
-
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - OG Movers</title>
+	{% load static %}
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="author" content="Untree.co">
 	<link rel="shortcut icon" href="{% static 'favicon.ico' %}">
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'AW-16485596543');
-</script>
-<!-- Hotjar Tracking Code for Site 5092808 (name missing) -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:5092808,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+	<meta name="description" content="" />
+	<meta name="keywords" content="bootstrap, bootstrap4" />
 
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+	<link href="{% static 'css/tiny-slider.css' %}" rel="stylesheet">
+	<link href="{% static 'css/style.css' %}" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+	<title>OG Movers and Packers</title>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5Q0BB445WZ"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
+		gtag('config', 'G-5Q0BB445WZ');
+	</script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
+		gtag('config', 'AW-16485596543');
+	</script>
+	<!-- Event snippet for Submit lead form conversion page -->
+	<script>
+		gtag('event', 'conversion', { 'send_to': 'AW-16485596543/An2RCNy94JkZEP_6-LQ9' });
+	</script>
+	<!-- Hotjar Tracking Code for Site 5092808 (name missing) -->
+	<script>
+		(function (h, o, t, j, a, r) {
+			h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+			h._hjSettings = { hjid: 5092808, hjsv: 6 };
+			a = o.getElementsByTagName('head')[0];
+			r = o.createElement('script'); r.async = 1;
+			r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+			a.appendChild(r);
+		})(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+	</script>
+	<meta name="trustpilot-one-time-domain-verification-id" content="343f0652-5e28-43f2-99c8-30f6dd5cf52d" />
 </head>
 
 <body>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 4px;
-            padding: 4px;
-            background: #fff;
-            /* White background */
-            color: #333;
-            /* Dark grey text for high contrast */
-        }
+	<!-- Add this script just before </body> -->
 
-        h1,
-        h2 {
-            color: #444;
-        }
 
-        p,
-        li {
-            font-size: 1em;
-        }
+	<style>
+		.container-3d {
+			border: 3px solid #000;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+			background-color: #fff;
+			/* Background color for the content */
+		}
+	</style>
 
-        a {
-            color: #0066ff;
-            /* Blue color for links */
-        }
+	<!-- Start Header/Navigation -->
+	<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
-        /* Additional styles for better visibility */
-        h2 {
-            font-size: 1.5em;
-            margin-top: 0.5em;
-            margin-bottom: 0.5em;
-        }
+		<div class="container">
+			<a href="/"><img class="navbar-brand" style="height: 60px; border-radius: 60px;" id="logo"
+					src="{% static 'logo.png' %}"></a>
 
-        p,
-        li {
-            font-size: 1.2em;
-            /* Larger font size for readability */
-        }
-    </style>
-    </head>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni"
+				aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
-    <body>
-        <h1>Privacy Policy</h1>
+			<div class="collapse navbar-collapse" id="navbarsFurni">
+				<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
+					<li><a class="nav-link btn" target="_blank" href="tel:+61434653406">+61 434 653 406</a></li>
+					<li>
+						<a class="btn btn-warning" href="/">Home</a>
+					</li>
+					<li><a class="btn btn-warning" href="{% url 'contact' %}">Contact us</a></li>
+					<li><a class="btn btn-warning" href="{% url 'service' %}">Services</a></li>
+					<li><a class="btn btn-warning" href=" {% url 'iservice' 'FAQ' %} ">FAQ</a></li>
+					<li><a class="btn btn-warning" href="{% url 'iservice' 'ABOUT' %}">About us</a></li>
+					<li><a href="{% url 'contact' %}" class="btn btn-warning">Get a Quote</a></li>
+
+				</ul>
+			</div>
+		</div>
+
+	</nav>
+	<a href="tel:+61434653406" class="fixed-button whatsapp-button">
+		<i class="bi bi-telephone-fill"></i>
+	</a>
+	<style>
+		.bgg {
+			background-image: url('static/images/c-form.jpeg');
+			background-size: cover;
+			/* Adjust as needed (cover, contain, etc.) */
+			background-repeat: no-repeat;
+		}
+
+		.text-black {
+			color: black;
+		}
+	</style>
+	<section>
+		<div id="background-img">
+			<div class="hero">
+				<div class="container">
+					<div class="row justify-content-between">
+						<div class="col-lg-5">
+							<div class="intro-excerpt">
+								<h1 style="color: #ffffff;">Reliable and Reasonably Priced Removalists in
+									Adelaide<span clsas="d-block"></span></h1>
+								<p style="color: #ffffff;" class="mb-4">For all of your relocation needs in
+									Adelaide, we
+									have
+									you covered.
+								</p>
+								<p><a href="{% url 'contact' %}" class="btn btn-secondary me-2">Get a Quote</a><a
+										target="_blank" href="tel:+61434653406" class="btn btn-secondary">Call Us
+										Now</a>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+        <div class="container">
+        <section>
+            <h1>Privacy Policy</h1>
 
         <p>This following document sets forth the Privacy Policy for the OG Movers website, <a
                 href="https://www.ogmovers.com.au/">https://www.ogmovers.com.au/</a>.</p>
@@ -142,81 +202,104 @@
         <p>By using our services, you acknowledge that you have read and understood this Privacy Policy and agree to its
             terms.</p>
 
-    </body>
-    <footer class="footer-section">
-		<div class="container relative">
+           
+        </section>
+    </div>
+		<!-- Start Footer Section -->
+		<footer class="footer-section">
+			<div class="container relative">
 
-			<div class="row">
-				<div class="col-lg-8">
+				<div class="row">
+					<div class="col-lg-8">
 
+					</div>
 				</div>
-			</div>
-			<div class="row g-5 mb-5">
-				<div class="col-lg-4">
+				<div class="row g-5 mb-5">
+					<div class="col-lg-4">
 
-					<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Elevating Relocation Experiences
-							with Expertise and Care!<span>.</span></a></div>
-					<p class="mb-4">At OG Movers, we are dedicated to making your move as smooth and stress-free as
-						possible. With years of experience in the moving industry, we pride ourselves on reliability,
-						professionalism, and exceptional customer service. Whether you're moving across town or across
-						the country, our team of skilled movers is committed to handling your belongings with care and
-						ensuring a seamless transition to your new home or office. From packing and transportation to
-						unpacking and setup, we offer a full range of moving services tailored to meet your unique
-						needs. Trust OG Movers to deliver quality service and peace of mind for your next move..</p>
+						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Elevating Relocation
+								Experiences
+								with Expertise and Care!<span>.</span></a></div>
+						<p class="mb-4">At OG Movers, we are dedicated to making your move as smooth and
+							stress-free as
+							possible. With years of experience in the moving industry, we pride ourselves on
+							reliability,
+							professionalism, and exceptional customer service. Whether you're moving across town
+							or
+							across
+							the country, our team of skilled movers is committed to handling your belongings
+							with care
+							and
+							ensuring a seamless transition to your new home or office. From packing and
+							transportation
+							to
+							unpacking and setup, we offer a full range of moving services tailored to meet your
+							unique
+							needs. Trust OG Movers to deliver quality service and peace of mind for your next
+							move..</p>
 
-					<ul class="list-unstyled custom-social">
-						<li><a href="https://www.facebook.com/profile.php?id=61557985231099"><span class="fa fa-brands fa-facebook-f"></span></a></li>
-						<li><a href="#"><span class="fa fa-brands fa-twitter"></span></a></li>
-						<li><a href="https://www.instagram.com/ogmovers/" target="_blank"><span
-									class="fa fa-brands fa-instagram"></span></a></li>
-						<li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
-					</ul>
-				</div>
-
-				<div class="col-lg-8">
-					<div class="row links-wrap">
-						<div class="col-6 col-sm-6 col-md-3">
-							<ul class="list-unstyled">
-								<li><a href="{% url 'iservice' 'ABOUT' %}">About us</a></li>
-								<li><a href="{% url 'terms' %}">Terms and Conditions</a></li>
-								<li><a href="{% url 'contact' %}">Contact us</a></li>
-								<li><iframe
-										src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d59644446.984194264!2d91.5130743!3d-24.157415!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa20ad3b42d0d0245%3A0x3f36b978203408ab!2sOG%20Movers!5e0!3m2!1sen!2sin!4v1714326969689!5m2!1sen!2sin"
-										width="340" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-										referrerpolicy="no-referrer-when-downgrade"></iframe></li>
-								<!--<li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509577!2d144.95373531544364!3d-37.817209979751984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ab0c93b70926705%3A0x1c033657a35104f0!2sAdelaide+SA+5000,+Australia!5e0!3m2!1sen!2sau!4v1630291924470!5m2!1sen!2sau" width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>-->
-								</li>
-							</ul>
+						<ul class="list-unstyled custom-social">
+							<h3 class="h3">Follow us on</h3>
+							<li><a href="https://www.facebook.com/profile.php?id=61557985231099"><span
+										class="fa fa-brands fa-facebook-f"></span></a></li>
+							<li><a href="https://www.tiktok.com/@og.movers?_t=8oDKu8nNwut&_r=1"><span
+										class="fa fa-brands fa-tiktok"></i></span></a></li>
+							<li><a href="https://www.instagram.com/ogmovers/" target="_blank"><span
+										class="fa fa-brands fa-instagram"></span></a></li>
+							<li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
+						</ul>
+					</div>
+					<div class="col-lg-8">
+						<div class="row links-wrap">
+							<div class="col-6 col-sm-6 col-md-3">
+								<ul class="list-unstyled">
+									<li><a style="color: #00008B;" href="{% url 'iservice' 'ABOUT' %}">About us</a></li>
+									<li><a style="color: #00008B;" href="{% url 'terms' %}">Terms and Conditions</a>
+									</li>
+									<li><a style="color: #00008B;" href="{% url 'contact' %}">Contact us</a></li>
+									<li><a style="color: #00008B;" href="{% url 'privacy' %}">Privacy Policy</a></li>
+									<li><a style="color: #00008B;" href="{% url 'iservice' 'FAQ' %}">FAQ</a></li>
+									<li><a style="color: #00008B;"
+											href="{% url 'iservice' 'insurance-policy' %}">Insurance Policy</a></li>
+								</ul>
+							</div>
 						</div>
-
-
-
-
 					</div>
-				</div>
 
+					<!-- Google Maps iframe -->
+					<iframe
+						src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d59644446.984194264!2d91.5130743!3d-24.157415!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa20ad3b42d0d0245%3A0x3f36b978203408ab!2sOG%20Movers!5e0!3m2!1sen!2sin!4v1714326969689!5m2!1sen!2sin"
+						width="340" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+						referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+					<footer class="border-top">
+						<div class="container pt-4">
+							<div class="row">
+								<div class="col-lg-6">
+									<p class="mb-2 text-center text-lg-start">
+										&copy;
+										<script>document.write(new Date().getFullYear());</script> OG Movers. All Rights
+										Reserved.
+									</p>
+									<p class="text-center text-lg-start">
+										&copy; 2024 Designed and Developed by <a style="color: #00008B;"
+											href="https://www.mandeep-developer.site/">Developer</a>
+									</p>
+								</div>
+								<div class="col-lg-6">
+									<ul
+										class="list-unstyled d-inline-flex justify-content-center justify-content-lg-end">
+
+									</ul>
+								</div>
+							</div>
+						</div>
+					</footer>
+				</div>
 			</div>
 
-			<div class="border-top copyright">
-				<div class="row pt-4">
-					<div class="col-lg-6">
-						<p class="mb-2 text-center text-lg-start">Copyright &copy;
-							<script>document.write(new Date().getFullYear());</script>. OG Movers. &mdash;
-							<!-- License information: https://untree.co/license/ -->
-						</p>
-                        <a href="https://www.mandeep-developer.site/">2024 &copy; All Rights Reserved |
-                            Designed and Developed
-                            by
-                            Developer</a>
-					</div>
-
-                    <footer>
-                        <ul class="list-unstyled d-inline-flex ms-auto">
-                            <li class="me-4"><a href="{% url 'terms' %}">Terms & Conditions</a></li>
-                            <li><a href="{% url 'privacy' %}">Privacy Policy</a></li>
-                            
-                        </ul>
-                    </footer>
+	</div>
+	</footer>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -225,6 +308,20 @@
 
 		gtag('config', 'AW-16485596543');
 	</script>
+	<!-- End Footer Section -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+	<!-- Bootstrap JS and its dependencies -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
+	<script src="{% static 'js/tiny-slider.js' %}"></script>
+	<script src="{% static 'js/custom.js' %}"></script>
+</body>
 
 </html>
