added hide developer section

--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -1178,10 +1178,7 @@
 										<script>document.write(new Date().getFullYear());</script> OG Movers. All Rights
 										Reserved.
 									</p>
-									<p class="text-center text-lg-start">
-										&copy; 2024 Designed and Developed by <a style="color: #00008B;"
-											href="https://www.mandeep-developer.site/">Developer</a>
-									</p>
+									<div class="text-center text-lg-start" id="paragraph"></div>
 								</div>
 								<div class="col-lg-6">
 									<ul
